--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div> -->
           <h1><bold>Juarez PC Fix</bold></h1>
 
-          <h1>WE ARE <bold>ALMOST</bold> THERE</h1>
+          <h1>WE  <bold>WILL BE</bold> BACK</h1>
         </div>
       </div>
       <!--/row-->
@@ -61,7 +61,9 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
 
-          <h2>We are working hard to launch our awesome new site.</h2>
+          <h2>We are working hard to launch our new redesigned website.</h2>
+          <h2>Estamos trabajando arduamente en nuestra nueva pagina rediseñada.</h2>
+
           <div class="col-md-6 col-md-offset-3">
             <!-- <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
