--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 						<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 							<ul class="navigation clearfix">
-								<li class=""><a href="#">Inicio</a>
+                <li class=""><a href="#">Inicio</a>
 									<!-- <ul>
 										<li class="dropdown"><a href="#">Home Pages</a>
 											<ul>
@@ -130,7 +130,7 @@
 
 									</ul> -->
 								</li>
-								<li class=""><a href="#">Proyectos</a>
+								<li class=""><a href="#"></a>
 									<!-- <ul>
 										<li><a href="projects.html">Projects</a></li>
 										<li><a href="projects-detail.html">Projects Detail</a></li>
@@ -153,8 +153,8 @@
 										<li><a href="not-found.html">Not Found</a></li>
 									</ul>
 								</li> -->
-								<li><a href="contact.html">Contactanos</a></li>
-                <li><a href="about.html">Quienes Somos</a></li>
+								<li><a href="">Contactanos</a></li>
+                <li><a href=""></a></li>
                 <li><a></a></li>
                 <li><a></a></li>
                 <li><a></a></li>
