--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
 										<li>
 											<span class="icon flaticon-placeholder-2"></span>
 											<strong>Direccion</strong>
-											12345, Juarez, Mexico
+											Av. López Mateos 5, Zona Pronaf Condominio La Plata, 32315 Cd Juárez, Chih., Mexico
 										</li>
 										<li>
 											<span class="icon flaticon-phone-call"></span>
