--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="top-right pull-right">
 						<!-- Social Box -->
 						<ul class="social-box">
-							<li><a href="#" class="fa fa-facebook-f"></a></li>
+							<li><a href="https://www.facebook.com/cdjuarezpcfix" class="fa fa-facebook-f"></a></li>
 							<!-- <li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-dribbble"></a></li>
 							<li><a href="#" class="fa fa-google"></a></li> -->
