--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-computer"></span>
 							</div>
-							<h5><a href="services-detail.html">Instalacion Windows</a></h5>
+							<h5><a href="">Instalacion Windows</a></h5>
 							<div class="text">Instale o repare su sistema operativo Windows o Mac.</div>
 						</div>
 					</div>
@@ -604,7 +604,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-web"></span>
 							</div>
-							<h5><a href="services-detail.html">Mantelimiento Laptops</a></h5>
+							<h5><a href="">Mantenimiento Laptops</a></h5>
 							<div class="text">Recomendable si su computadora es lenta</div>
 						</div>
 					</div>
