--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-mobile-app"></span>
 							</div>
-							<h5><a href="""">Configuracion Inicial</a></h5>
+							<h5><a href="">Configuracion Inicial</a></h5>
 							<div class="text">Asegure su computadora nueva para estar lista para usarla.</div>
 						</div>
 					</div>
@@ -630,7 +630,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-human-resources"></span>
 							</div>
-							<h5><a href="""">Instalacion-Conectividad de Impresoras</a></h5>
+							<h5><a href="">Instalacion-Conectividad de Impresoras</a></h5>
 							<div class="text">Para impresoras nuevas o ya existentes</div>
 						</div>
 					</div>
@@ -642,7 +642,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href="""">Instalacion de Aplicaciones</a></h5>
+              <h5><a href="">Instalacion de Aplicaciones</a></h5>
               <div class="text">Problemas o mensajes de error de alguna aplicacion.</div>
             </div>
           </div>
@@ -654,7 +654,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href="""">Redes <br>Inalambricas</br></a></h5>
+              <h5><a href="">Redes <br>Inalambricas</br></a></h5>
               <div class="text">Ayuda para asegurar tu red inalambrica y solucion de problemas generales.</div>
             </div>
           </div>
@@ -666,7 +666,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href="""">Solucion <br>Rapida</br></a></h5>
+              <h5><a href="">Solucion <br>Rapida</br></a></h5>
               <div class="text">Ayuda para solucionar problemas sencillos.</div>
             </div>
           </div>
