--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-coding-1"></span>
 							</div>
-							<h5><a href=" ">Virus</a></h5>
+							<h5><a >Virus</a></h5>
 							<div class="text">Evite daño a su sistema e informacion sensible.</div>
 						</div>
 					</div>
@@ -578,7 +578,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-mobile-app"></span>
 							</div>
-							<h5><a href=" ">Configuracion Inicial</a></h5>
+							<h5><a >Configuracion Inicial</a></h5>
 							<div class="text">Asegure su computadora nueva para estar lista para usarla.</div>
 						</div>
 					</div>
@@ -591,7 +591,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-computer"></span>
 							</div>
-							<h5><a href=" ">Instalacion Windows</a></h5>
+							<h5><a >Instalacion Windows</a></h5>
 							<div class="text">Instale o repare su sistema operativo Windows o Mac.</div>
 						</div>
 					</div>
@@ -604,7 +604,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-web"></span>
 							</div>
-							<h5><a href=" ">Mantenimiento Laptops</a></h5>
+							<h5><a >Mantenimiento Laptops</a></h5>
 							<div class="text">Recomendable si su computadora es lenta</div>
 						</div>
 					</div>
@@ -617,7 +617,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-monitor-2"></span>
 							</div>
-							<h5><a href=" ">Correo Electronico</a></h5>
+							<h5><a >Correo Electronico</a></h5>
 							<div class="text">Para cuentas de correo no creadas o registradas en la computadora.</div>
 						</div>
 					</div>
@@ -630,7 +630,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-human-resources"></span>
 							</div>
-							<h5><a href=" ">Instalacion-Conectividad de Impresoras</a></h5>
+							<h5><a>Instalacion-Conectividad de Impresoras</a></h5>
 							<div class="text">Para impresoras nuevas o ya existentes</div>
 						</div>
 					</div>
@@ -654,7 +654,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href=" ">Redes <br>Inalambricas</br></a></h5>
+              <h5><a >Redes <br>Inalambricas</br></a></h5>
               <div class="text">Ayuda para asegurar tu red inalambrica y solucion de problemas generales.</div>
             </div>
           </div>
@@ -666,7 +666,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href=" ">Solucion <br>Rapida</br></a></h5>
+              <h5><a >Solucion <br>Rapida</br></a></h5>
               <div class="text">Ayuda para solucionar problemas sencillos.</div>
             </div>
           </div>
