--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>JuarezPCFix | Homepage--</title>
+<title>JuarezPCFix|Homepage</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -11,6 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Nunito+Sans:wght@300;600;700;800;900&display=swap" rel="stylesheet">
 
 <!-- Color Switcher Mockup -->
+<!-- Color Switcher Mockup -->
+
 <link href="css/color-switcher-design.css" rel="stylesheet">
 
 <!-- Color Themes -->
@@ -54,7 +56,7 @@
                     <div class="top-right pull-right">
 						<!-- Social Box -->
 						<ul class="social-box">
-							<li><a href="https://www.facebook.com/cdjuarezpcfix" class="fa fa-facebook-f"></a></li>
+							<li><a href="#" class="fa fa-facebook-f"></a></li>
 							<!-- <li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-dribbble"></a></li>
 							<li><a href="#" class="fa fa-google"></a></li> -->
@@ -70,7 +72,7 @@
         	<div class="auto-container clearfix">
 
 				<div class="pull-left logo-box">
-					<div class="logo"><a href="index.html"><img src="images/mainLogo.jpg" alt="" title=""></a></div>
+					<div class="logo center"><a href="index.html"><img src="images/mainLogo6.jpg" alt="" title=""></a></div>
 				</div>
 
 				<div class="nav-outer clearfix">
@@ -89,7 +91,7 @@
 
 						<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 							<ul class="navigation clearfix">
-                <li class=""><a href="#">Inicio</a>
+								<li class=""><a href="#">Inicio</a>
 									<!-- <ul>
 										<li class="dropdown"><a href="#">Home Pages</a>
 											<ul>
@@ -130,7 +132,7 @@
 
 									</ul> -->
 								</li>
-								<li class=""><a href="#"></a>
+								<!-- <li class=""><a href="#">Proyectos</a> -->
 									<!-- <ul>
 										<li><a href="projects.html">Projects</a></li>
 										<li><a href="projects-detail.html">Projects Detail</a></li>
@@ -153,8 +155,32 @@
 										<li><a href="not-found.html">Not Found</a></li>
 									</ul>
 								</li> -->
-								<li><a href="">Contactanos</a></li>
-                <li><a href=""></a></li>
+								<li><a href="contact.html">Contactanos</a></li>
+                <!-- <li><a href="about.html">Quienes Somos</a></li> -->
+                <li class=""><a href="https://juarezpcfix.servicecamp.com/portal">Team Viewer Ticket</a>
+                  <ul>
+										<li><a href="blog.html">Our Blog</a></li>
+									</ul>
+                  <!-- <ul>
+                    <li class="dropdown"><a href="#">Home Pages</a>
+                      <ul>
+                        <li><a href="index.html">Home Page 01</a></li>
+                        <li><a href="index-2.html">Home Page 02</a></li>
+                        <li><a href="index-3.html">Home Page 03</a></li>
+                      </ul>
+                    </li>
+                    <li class="dropdown"><a href="#">Header styles</a>
+                      <ul>
+                        <li><a href="index.html">Header Style 01</a></li>
+                        <li><a href="index-2.html">Header Style 02</a></li>
+                        <li><a href="index-3.html">Header Style 03</a></li>
+                        <li><a href="index-4.html">Header Style 04</a></li>
+                        <li><a href="index-5.html">Header Style 05</a></li>
+                        <li><a href="index-6.html">Header Style 06</a></li>
+                      </ul>
+                    </li>
+                  </ul> -->
+                </li>
                 <li><a></a></li>
                 <li><a></a></li>
                 <li><a></a></li>
@@ -565,7 +591,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-coding-1"></span>
 							</div>
-							<h5><a >Virus</a></h5>
+							<h5><a href="">Virus</a></h5>
 							<div class="text">Evite daño a su sistema e informacion sensible.</div>
 						</div>
 					</div>
@@ -578,7 +604,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-mobile-app"></span>
 							</div>
-							<h5><a >Configuracion Inicial</a></h5>
+							<h5><a href="services-detail.html">Configuracion Inicial</a></h5>
 							<div class="text">Asegure su computadora nueva para estar lista para usarla.</div>
 						</div>
 					</div>
@@ -591,7 +617,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-computer"></span>
 							</div>
-							<h5><a >Instalacion Windows</a></h5>
+							<h5><a href="services-detail.html">Instalacion Windows</a></h5>
 							<div class="text">Instale o repare su sistema operativo Windows o Mac.</div>
 						</div>
 					</div>
@@ -604,7 +630,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-web"></span>
 							</div>
-							<h5><a >Mantenimiento Laptops</a></h5>
+							<h5><a href="services-detail.html">Mantelimiento Laptops</a></h5>
 							<div class="text">Recomendable si su computadora es lenta</div>
 						</div>
 					</div>
@@ -617,7 +643,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-monitor-2"></span>
 							</div>
-							<h5><a >Correo Electronico</a></h5>
+							<h5><a href="services-detail.html">Correo Electronico</a></h5>
 							<div class="text">Para cuentas de correo no creadas o registradas en la computadora.</div>
 						</div>
 					</div>
@@ -630,7 +656,7 @@
 							<div class="icon-box">
 								<span class="icon flaticon-human-resources"></span>
 							</div>
-							<h5><a>Instalacion-Conectividad de Impresoras</a></h5>
+							<h5><a href="services-detail.html">Instalacion-Conectividad de Impresoras</a></h5>
 							<div class="text">Para impresoras nuevas o ya existentes</div>
 						</div>
 					</div>
@@ -642,7 +668,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a href="">Instalacion de Aplicaciones</a></h5>
+              <h5><a href="services-detail.html">Instalacion de Aplicaciones</a></h5>
               <div class="text">Problemas o mensajes de error de alguna aplicacion.</div>
             </div>
           </div>
@@ -654,7 +680,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a >Redes <br>Inalambricas</br></a></h5>
+              <h5><a href="services-detail.html">Redes <br>Inalambricas</br></a></h5>
               <div class="text">Ayuda para asegurar tu red inalambrica y solucion de problemas generales.</div>
             </div>
           </div>
@@ -666,7 +692,7 @@
               <div class="icon-box">
                 <span class="icon flaticon-human-resources"></span>
               </div>
-              <h5><a >Solucion <br>Rapida</br></a></h5>
+              <h5><a href="services-detail.html">Solucion <br>Rapida</br></a></h5>
               <div class="text">Ayuda para solucionar problemas sencillos.</div>
             </div>
           </div>
@@ -1030,7 +1056,7 @@
                             <div class="footer-column col-lg-7 col-md-6 col-sm-12">
                                 <div class="footer-widget logo-widget">
 									<div class="logo">
-										<a href="index.html"><img src="images/mainLogo2.jpg" alt="" /></a>
+										<a href="index.html"><img src="images/mainLogo6.jpg" alt="" /></a>
 									</div>
 									<div class="text">Somos la mejor compania de servicios de tecnologia. Brindando al cliente las mejores soluciones a los problemas tecnologicos. Contamos con mas de 10 años experiencia.</div>
 									<!-- Social Box -->
@@ -1095,7 +1121,7 @@
 										<li>
 											<span class="icon flaticon-placeholder-2"></span>
 											<strong>Direccion</strong>
-											Av. López Mateos 5, Zona Pronaf Condominio La Plata, 32315 Cd Juárez, Chih., Mexico
+											12345, Juarez, Mexico
 										</li>
 										<li>
 											<span class="icon flaticon-phone-call"></span>
